# footballgame

./: .gitignore  .mcp.json  BUILD_DLL.md  Cargo.toml  godot_bridge.gdextension  package-lock.json  package.json  potagon_action_rules.json  project.godot
crates/cache_builder/: Cargo.toml
crates/cache_builder/src/: lib.rs  main.rs  person_cache.rs
crates/of_adapter/: Cargo.toml
crates/of_adapter/examples/: replay_dump.rs  test_crash.rs
crates/of_adapter/src/: engine_bridge.rs  lib.rs  mapper.rs  mapper.rs.backup_p0_2_20251101  squad_selector.rs  tactical_analysis.rs
crates/of_core/: .gitignore  .rustfmt.toml  Cargo.toml  README.md  clippy.toml
crates/of_core/docs/: migration_guide.md  performance_report.md
crates/of_core/schemas/: rulebook_ui_card.schema.json
crates/of_core/src/: error.rs  fix01.rs  lib.rs  test_quick.rs
crates/of_core/src/analysis/: mod.rs
crates/of_core/src/analysis/events/: carry_extractor.rs  mod.rs  run_extractor.rs  sprint_extractor.rs
crates/of_core/src/analysis/metrics/: gini.rs  mod.rs  movement.rs  shape.rs
crates/of_core/src/analysis/qa/: advanced_metrics.rs  consistency_checker.rs  football_likeness.rs  mod.rs  physics_validator.rs
crates/of_core/src/analysis/scout/: mod.rs  model.rs  report.rs  style_tags.rs
crates/of_core/src/api/: budget.rs  budget_test.rs  coach_json.rs  exp_config_env.rs  json_api.rs  json_api_budget.rs  mod.rs  player_json.rs  story_json.rs  training_json.rs
crates/of_core/src/calibration/: anchor_table.rs  calibrator.rs  mod.rs  pass_classifier.rs  qa_baseline.json  scenario_runner.rs  scenarios.rs  stat_snapshot.rs  symmetry_runner.rs  zone.rs
crates/of_core/src/coach/: card.rs  deck.rs  deck_match_modifiers.rs  gacha.rs  inventory.rs  inventory_system.rs  mod.rs  synergy.rs  tactics.rs  unified_inventory.rs
crates/of_core/src/data/: embedded.rs  mod.rs  person_cache.rs  rulebook_ui_cards.rs  rules.rs  scale_conversion.rs
crates/of_core/src/engine/: action_detail.rs  action_metadata.rs  action_queue.rs  action_scoring.rs  action_scoring_types.rs  actions.rs  actor_state_validator.rs  audit_gates.rs  ball.rs  ball_flight_resolver.rs  ball_physics_params.rs  ball_prediction.rs  behavior_events.rs  behavior_intent.rs  body_blocking.rs  body_orientation.rs  coordinate_contract.rs  coordinates.rs  core_context.rs  debug_flags.rs  debug_logger.rs  deck_modifiers.rs  defensive_positioning.rs  dsa_summary.rs  duel.rs  elastic_band.rs  events.rs  execution_error.rs  field_board.rs  force_field.rs  formation_waypoints.rs  goal.rs  intent_arbiter.rs  intent_log.rs  interpretation_v1.rs  live_match.rs  marking_manager.rs  match_analysis.rs  match_modifiers.rs  mindset.rs  (+40 more)
crates/of_core/src/engine/action_evaluator/: action_set.rs  hard_gate.rs  mod.rs  pipeline.rs  state.rs  team_coord.rs  types.rs  weights.rs
crates/of_core/src/engine/behaviors/: defender.rs  defender_blocking.rs  defender_covering.rs  defender_holding_line.rs  defender_intercepting.rs  defender_marking.rs  defender_offside_trap.rs  defender_pressing.rs  defender_pushing_up.rs  defender_states.rs  defender_tracking_back.rs  forward.rs  forward_assisting.rs  forward_creating_space.rs  forward_holding_up_play.rs  forward_offside_trap_breaking.rs  forward_pressing.rs  forward_receiving_cross.rs  forward_run_in_behind.rs  forward_states.rs  goalkeeper.rs  goalkeeper_action_states.rs  goalkeeper_attentive.rs  goalkeeper_distributing.rs  goalkeeper_holding_ball.rs  goalkeeper_passing.rs  goalkeeper_picking_up_ball.rs  goalkeeper_positioning.rs  goalkeeper_preempt.rs  goalkeeper_preparing_for_save.rs  goalkeeper_returning_to_goal.rs  goalkeeper_running.rs  goalkeeper_save_action.rs  goalkeeper_shooting.rs  goalkeeper_sweeping.rs  goalkeeper_tackling.rs  goalkeeper_under_pressure.rs  levers.rs  midfielder.rs  midfielder_attack_supporting.rs  (+7 more)
crates/of_core/src/engine/config/: audacity_config.rs  decision_config.rs  execution_config.rs  mod.rs  stamina_config.rs  thresholds_config.rs
crates/of_core/src/engine/decision_scheduler/: cadence.rs  dpq.rs  mod.rs
crates/of_core/src/engine/experimental/: mod.rs
crates/of_core/src/engine/growth/: hero_action_tag.rs  match_growth.rs  mod.rs  xp_bucket.rs  xp_calculator.rs
crates/of_core/src/engine/match_sim/: action_decision.rs  action_detail_v2.rs  aerial_duel.rs  ai_integration_tests.rs  attack_phase.rs  attacking_runs.rs  attribute_calc.rs  audacity.rs  balance_diagnostics.rs  ball_helpers.rs  (+57 more)
crates/of_core/src/models/: events.rs  match_result.rs  match_setup.rs  match_setup_contracts_test.rs  match_statistics.rs  mod.rs  oracle.rs  person.rs  player.rs  rules.rs  skill.rs  team.rs  trait_balance.rs  trait_system.rs
crates/of_core/src/player/: ca_calculator.rs  ca_model.rs  ca_weights.rs  ca_weights_v0.yaml  calculator.rs  calculator_test.rs  growth_calculator.rs  hexagon.rs  instructions.rs  memory_test.rs  mod.rs  optimization.rs  personality.rs  position_weights.rs  skill_system.rs  tests.rs  types.rs  validation.rs
crates/of_core/src/quest/: manager.rs  mod.rs  types.rs
crates/of_core/src/replay/: clip_reducer.rs  controller.rs  converter.rs  format_v2.rs  gen.rs  io.rs  mod.rs  position_tracker.rs  reader_v2.rs  recorder.rs  recording.rs  types.rs  validate.rs  writer_v2.rs
crates/of_core/src/save/: error.rs  format.rs  manager.rs  migration.rs  mod.rs
crates/of_core/src/special_ability/: combinations.rs  effects.rs  mod.rs  processor.rs  types.rs
crates/of_core/src/state/: mod.rs
crates/of_core/src/story/: branching.rs  conditions.rs  effects.rs  events.rs  localization.rs  mod.rs  serialization.rs  tests.rs  types.rs
crates/of_core/src/tactics/: ai_profiles.rs  famous_tactics.rs  mod.rs  openfootball_bridge.rs  team_instructions.rs
crates/of_core/src/training/: condition.rs  effects.rs  mod.rs  session.rs  stamina.rs  types.rs  weekly_plan.rs
godot_extension/: Cargo.toml  build.rs  football_rust.gdextension.disabled  football_rust.gdextension.uid
godot_extension/src/: data_cache.rs  data_cache.rs.backup_phase2_20251101  lib.rs  quest_bridge.rs  story_bridge.rs
(+936 files in other folders)
