[package]
name = "cache_builder"
version = "0.1.0"
edition = "2021"

[features]
default = ["cli"]
# Embed player cache binary (400KB) directly into the executable
# Enables zero-file-IO loading via load_person_cache_embedded()
embedded_players = []
# CLI tool for building caches
cli = ["dep:clap"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
lz4_flex = "0.11"
sha2 = "0.10"
chrono = "0.4"
rustc-hash = "2.0"
csv = "1.3"
of_core = { path = "../of_core" }
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3.23.0"
