[package]
name = "of_adapter"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Adapter: Core ↔ Engine conversions (CA/PA/condition and optional 36-skill vendor wire)"
license = "MIT OR Apache-2.0"
publish = false

[features]
# 벤더 36속성 지원 (of_core 기반)
default = ["vendor_skills"]
vendor_skills = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
once_cell = "1.19"
chrono = "0.4"

# 내부 크레이트 참조
of_core = { path = "../of_core" }

[lib]
path = "src/lib.rs"
